--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
     <header class="masthead" style="background-image:url('assets/img/home-bg.jpg');">
         <div class="overlay"></div>
-        <div class="container">
+        <div class="container content">
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto">
                     <div class="site-heading">
