--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/loader.css">
 </head>
 
-<body class="content">
+<body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
         <div class="container"><a class="navbar-brand" href="index.html">Aeternity</a><button class="navbar-toggler"
                 data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
@@ -118,6 +118,8 @@
 
     </script>
 
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
@@ -127,7 +129,7 @@
     <script src="assets/js/index.js"></script>
     <script src="assets/js/loader.js"></script>
 
-
 </body>
+
 
 </html>
