--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </div>
         </div>
     </nav>
+    <div id="scrollbar">
     <header class="masthead" style="background-image:url('assets/img/home-bg.jpg');">
         <div class="overlay"></div>
         <div class="container ">
@@ -97,6 +98,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </footer>
 
     <script id="template" type="x-tmpl-mustache">
@@ -130,6 +132,8 @@
     <script src="assets/js/loader.js"></script>
 
 </body>
+
+
 
 
 </html>
