--- a/index.html
+++ b/index.html
@@ -31,80 +31,83 @@
         </div>
     </nav>
     <div id="scrollbar">
-    <header class="masthead" style="background-image:url('assets/img/home-bg.jpg');">
-        <div class="overlay"></div>
-        <div class="container ">
-            <div class="row">
-                <div class="col-md-10 col-lg-8 mx-auto">
-                    <div class="site-heading">
-                        <h1>Life Hacks</h1><span class="subheading">Get Your Life Hacked</span>
+        <header class="masthead" style="background-image:url('assets/img/home-bg.jpg');">
+            <div class="overlay"></div>
+            <div class="container ">
+                <div class="row">
+                    <div class="col-md-10 col-lg-8 mx-auto">
+                        <div class="site-heading">
+                            <h1>Life Hacks</h1><span class="subheading">Get Your Life Hacked</span>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </header>
-    <div class="row register-form">
-        <div class="col-md-8 offset-md-2">
-            <form class="custom-form">
-                <h1>Register LifeHack</h1>
-                <div id="loadings"><img src="assets\img\loading.svg">
-                    <div><b>LOADING</b></div>
-                </div>
-                <div class="form-row form-group">
-                    <div class="col-sm-4 label-column"><label class="col-form-label" for="name-input-field" id="name">Name</label>
+        </header>
+        <div class="row register-form">
+            <div class="col-md-8 offset-md-2">
+                <form class="custom-form">
+                    <h1>Register LifeHack</h1>
+                    <div id="loadings"><img src="assets\img\loading.svg">
+                        <div><b>LOADING</b></div>
                     </div>
-                    <div class="col-sm-6 input-column"><input class="form-control" type="text"></div>
-                </div>
-                <div class="form-row form-group">
-                    <div class="col-sm-4 label-column"><label class="col-form-label" for="email-input-field" id="imageUrl">Image
-                            Url</label></div>
-                    <div class="col-sm-6 input-column"><input class="form-control" type="email"></div>
-                </div>
-                <div class="form-row form-group">
-                    <div class="col-sm-4 label-column"><label class="col-form-label"
-                            for="text-input-field" id="lifeHack">LifeHack</label></div>
-                    <div class="col-sm-6 input-column"><textarea class="form-control"></textarea></div>
-                </div>
-                <div class="form-row form-group">
-                    <div class="col-sm-4 label-column"><label class="col-form-label"
-                            for="text-input-field" id="title">Title</label></div>
-                    <div class="col-sm-6 input-column"><input class="form-control" type="text"></div>
-                </div>
-                <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-2"><label
-                        class="form-check-label" for="formCheck-2">I've read and accept the terms and conditions</label>
-                </div><button class="btn btn-light submit-button" id="regButton" type="button">Submit Form</button>
-            </form>
-        </div>
-    </div>
-    <div class="container" id="body">
-        
-    </div>
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 col-lg-8 mx-auto">
-                    <ul class="list-inline text-center">
-                        <li class="list-inline-item"><span class="fa-stack fa-lg"><i
-                                    class="fa fa-circle fa-stack-2x"></i><i
-                                    class="fa fa-twitter fa-stack-1x fa-inverse"></i></span>
-                        </li>
-                        <li class="list-inline-item"><span class="fa-stack fa-lg"><i
-                                    class="fa fa-circle fa-stack-2x"></i><i
-                                    class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></li>
-                        <li class="list-inline-item"><span class="fa-stack fa-lg"><i
-                                    class="fa fa-circle fa-stack-2x"></i><i
-                                    class="fa fa-github fa-stack-1x fa-inverse"></i></span></li>
-                    </ul>
-                    <p class="text-muted copyright">Copyright&nbsp;©&nbsp;Dacade 2019</p>
-                </div>
+                    <div class="form-row form-group">
+                        <div class="col-sm-4 label-column" ><label class="col-form-label"
+                                for="name-input-field">Name</label>
+                        </div>
+                        <div class="col-sm-6 input-column"><input class="form-control" type="text" id="name"></div>
+                    </div>
+                    <div class="form-row form-group">
+                        <div class="col-sm-4 label-column" ><label class="col-form-label"
+                                for="email-input-field">Image
+                                Url</label></div>
+                        <div class="col-sm-6 input-column"><input class="form-control" type="url" id="imageUrl"></div>
+                    </div>
+                    <div class="form-row form-group">
+                        <div class="col-sm-4 label-column" ><label class="col-form-label"
+                                for="text-input-field">LifeHack</label></div>
+                        <div class="col-sm-6 input-column" ><textarea class="form-control" id="lifeHack"></textarea></div>
+                    </div>
+                    <div class="form-row form-group">
+                        <div class="col-sm-4 label-column" ><label class="col-form-label" for="text-input-field"
+                                >Title</label></div>
+                        <div class="col-sm-6 input-column"><input class="form-control" type="text" id="title"></div>
+                    </div>
+                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-2"><label
+                            class="form-check-label" for="formCheck-2">I've read and accept the terms and
+                            conditions</label>
+                    </div><button class="btn btn-light submit-button" id="regButton" type="button">Submit Form</button>
+                </form>
             </div>
         </div>
+        <div class="container" id="body">
+
+        </div>
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-10 col-lg-8 mx-auto">
+                        <ul class="list-inline text-center">
+                            <li class="list-inline-item"><span class="fa-stack fa-lg"><i
+                                        class="fa fa-circle fa-stack-2x"></i><i
+                                        class="fa fa-twitter fa-stack-1x fa-inverse"></i></span>
+                            </li>
+                            <li class="list-inline-item"><span class="fa-stack fa-lg"><i
+                                        class="fa fa-circle fa-stack-2x"></i><i
+                                        class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></li>
+                            <li class="list-inline-item"><span class="fa-stack fa-lg"><i
+                                        class="fa fa-circle fa-stack-2x"></i><i
+                                        class="fa fa-github fa-stack-1x fa-inverse"></i></span></li>
+                        </ul>
+                        <p class="text-muted copyright">Copyright&nbsp;©&nbsp;Dacade 2019</p>
+                    </div>
+                </div>
+            </div>
     </div>
     </footer>
 
     <script id="template" type="x-tmpl-mustache">
 
-            <div class="row">
+        <div class="row">
                     <div class="leftcolumn">
                       <div class="card">
                         <h2>TITLE HEADING</h2>
