--- a/index.html
+++ b/index.html
@@ -108,19 +108,14 @@
     <script id="template" type="x-tmpl-mustache">
 
         <div class="row">
-                    <div class="leftcolumn">
+                    <div>
                       <div class="card">
-                        <h2>TITLE HEADING</h2>
-                        <h5>Title description, Dec 7, 2017</h5>
-                        <div class="fakeimg" style="height:200px;">Image</div>
-                        <p>Some text..</p>
+                        <h2>{{name}}</h2>
+                        <h5>Title description, October, 2019</h5>
+                        <div class="fakeimg" style="height:200px;">{{url}}</div>
+                        <p>{{tutorial}}p>
                       </div>
-                      <div class="card">
-                        <h2>TITLE HEADING</h2>
-                        <h5>Title description, Sep 2, 2017</h5>
-                        <div class="fakeimg" style="height:200px;">Image</div>
-                        <p>Some text..</p>
-                      </div>
+                      
                     </div>
                     
 
