--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                       <div class="card">
                         <h2>{{name}}</h2>
                         <h5>Title description, October, 2019</h5>
-                        <div class="fakeimg" style="height:200px;">{{url}}</div>
+                        <div class="fakeimg" style="height:200px;">{{imageUrl}}</div>
                         <p>{{tutorial}}p>
                       </div>
                       
