--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </footer>
 
     <script id="template" type="x-tmpl-mustache">
-
+            {{#HackArray}}
         <div class="row">
                     <div>
                       <div class="card">
@@ -119,6 +119,7 @@
                       
                     </div>
                     
+                    {{/HackArray}}
 
     </script>
 
