--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
                       <div class="card">
                         <h2>{{name}}</h2>
                         <h5>October, 2019</h5>
-                        <div class="fakeimg" style="height:200px;">{{imageUrl}}</div>
-                        <p>{{tutorial}}p>
+                        <!-- <div style="height:200px;">{{imageUrl}}</div> -->
+                        <div class="col-md-12"><a href="#"><img src="{{imageUrl}}"></a>
+                        <p>{{tutorial}}<p>
                       </div>
                       
                     </div>
