--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
                       <div class="card">
                         <h2>{{name}}</h2>
                         <h5>October, 2019</h5>
-                        <!-- <div style="height:200px;">{{imageUrl}}</div> -->
-                        <div class="col-md-12"><a href="#"><img src="{{imageUrl}}"></a>
+                        <div style="max-width: 100%;
+                        height: auto;
+                        width: auto\9; /* ie8 */"><img src="{{imageUrl}}"></div>
+                        <!-- <div class="col-md-12"><img src="{{imageUrl}}"></a> -->
                         <p>{{tutorial}}<p>
                       </div>
                       
