--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@
                       <div class="card">
                         <h2>{{name}}</h2>
                         <h5>October, 2019</h5>
-                        <div style="max-width: 100%;
-                        height: auto;
-                        width: auto\9; /* ie8 */"><img src="{{imageUrl}}"></div>
+                        <img src="{{imageUrl}}" height =100, width=100>
                         <!-- <div class="col-md-12"><img src="{{imageUrl}}"></a> -->
                         <p>{{tutorial}}<p>
                       </div>
