--- a/index.html
+++ b/index.html
@@ -111,10 +111,11 @@
         <div class="row">
                     <div>
                       <div class="card">
-                        <h2>{{name}}</h2>
+                          <div class = "header"><h2>{{name}}</h2></div>
+                        
                         <h5>October, 2019</h5>
-                        <img src="{{imageUrl}}" height =100, width=100>
-                        <!-- <div class="col-md-12"><img src="{{imageUrl}}"></a> -->
+                        <!-- <img src="{{imageUrl}}" height =100, width=100> -->
+                        <div class="fakeimg"><img src="{{imageUrl}}"></a></div>
                         <p>{{tutorial}}<p>
                       </div>
                       
