--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         
                         <h5>October, 2019</h5>
                         <!-- <img src="{{imageUrl}}" height =100, width=100> -->
-                        <div class="fakeimg"><img src="{{imageUrl}}"></a></div>
+                        <div><img src="{{imageUrl}}" height =100, width=350></a></div>
                         <p>{{tutorial}}<p>
                       </div>
                       
