--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="about.html">About us</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact us</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="post.html">Blog Post</a></li>
+                    
                 </ul>
         </div>
         </div>
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto">
                     <div class="site-heading">
-                        <h1>About Me</h1><span class="subheading">This is what I do</span></div>
+                        <h1>About This Site</h1><span class="subheading">This is what we do</span></div>
                 </div>
             </div>
         </div>
@@ -40,9 +40,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-lg-8 mx-auto">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                <p>This is a decentralized life hack website where Users can register a life hack and also view lifehacks created on the platform</p>
+                <p>Aeternity Dacade Rocks</p>
+               
             </div>
         </div>
     </div>
