--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
     <script src="https://unpkg.com/@aeternity/aepp-sdk/dist/aepp-sdk.browser-script.js"></script>
     <script src="assets/js/index.js"></script>
     <script src="assets/js/loader.js"></script>
+    <script src="assets/js/like.js"></script>
 
 </body>
 
