--- a/index.html
+++ b/index.html
@@ -120,7 +120,10 @@
                         
                                 <!-- LikeBtn.com BEGIN -->
                                 <div>
-                                <span class="likebtn-wrapper" data-theme="custom" data-icon_l="hrt6" data-icon_d="thmb4-d" data-icon_l_c="red" data-icon_l_c_v="pink" data-icon_d_c="blue" data-icon_d_c_v="black" data-label_c="gray" data-f_family="Papyrus" data-label_fs="bi" data-counter_fs="bi" data-ef_voting="bounce" data-identifier="like_1"></span>
+                                    <button>
+                                            <span class="likebtn-wrapper" data-theme="custom" data-icon_l="hrt6" data-icon_d="thmb4-d" data-icon_l_c="red" data-icon_l_c_v="pink" data-icon_d_c="blue" data-icon_d_c_v="black" data-label_c="gray" data-f_family="Papyrus" data-label_fs="bi" data-counter_fs="bi" data-ef_voting="bounce" data-identifier="like_1"></span>
+                                    </button>
+                               
                             </div>
                                 <!-- LikeBtn.com END -->
                       </div>
