--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                         <div class="like-cnt unchecked" id="like-cnt">
                                         <i class="like-btn material-icons">thumb_up</i>
                                       </div>
-                                      </div>s
+                                      </div>
                                 <!-- LikeBtn.com END -->
                       </div>
                       
@@ -143,6 +143,7 @@
     <script src="assets/js/clean-blog.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.js"></script>
     <script src="https://unpkg.com/@aeternity/aepp-sdk/dist/aepp-sdk.browser-script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mojs/core"></script>
     <script src="assets/js/index.js"></script>
     <script src="assets/js/loader.js"></script>
     <script src="assets/js/like.js"></script>
