--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
         </div>
         <div class="container" id="body">
 
+            <!-- LikeBtn.com BEGIN -->
+<span class="likebtn-wrapper" data-identifier="item_1"></span>
+<script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js");</script>
+<!-- LikeBtn.com END -->
         </div>
         <footer>
             <div class="container">
