--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="form-row form-group">
                         <div class="col-sm-4 label-column"><label class="col-form-label"
-                                for="name-input-field">Name</label>
+                                for="name-input-field">Title of LifeHack</label>
                         </div>
                         <div class="col-sm-6 input-column"><input class="form-control" type="text" id="name"></div>
                     </div>
@@ -72,7 +72,7 @@
                     </div>
                     <div class="form-row form-group">
                         <div class="col-sm-4 label-column"><label class="col-form-label"
-                                for="text-input-field">Title</label></div>
+                                for="text-input-field">Username</label></div>
                         <div class="col-sm-6 input-column"><input class="form-control" type="text" id="title"></div>
                     </div>
                     <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-2"><label
