--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <script src="assets/js/loader.js"></script>
     
     
-    <script src="assets/js/like.js"></script>
+    <!-- <script src="assets/js/like.js"></script> -->
 
 </body>
 
