--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
                         <!-- <img src="{{imageUrl}}" height =100, width=100> -->
                         <div><img src="{{imageUrl}}" height =300, width=350></a></div>
                         <p>{{tutorial}}<p>
+
+                            <p>Number of Likes : {{numberOfLikes}}</p>
                         
                                 <!-- LikeBtn.com BEGIN -->
                                 <button class="btn-secondary like-review">
