--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <div><img src="{{imageUrl}}" height =300, width=350></a></div>
                         <p>{{tutorial}}<p>
 
-                            <p>Number of Likes : {{numberOfLikes}}</p>
+                            <!-- <p>Number of Likes : {{numberOfLikes}}</p> -->
                         
                                 <!-- LikeBtn.com BEGIN -->
                                 <button class="btn-secondary like-review">
